--- a/style.css
+++ b/style.css
@@ -45,15 +45,6 @@ body {
     ;
 }
 
-
-.header__logo__text {
-    font-family: 'Inspiration', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-    font-size: 24px;
-    font-weight: 400;
-    color: #000000;
-    letter-spacing: 0.5px;
-}
-
 /* Navigation Menu */
 .nav__menu {
     display: flex;
@@ -139,8 +130,19 @@ body {
     color: #000000;
 }
 
-.header__hero h1 .highlight {
-    color: #9333EA;
+.header__hero h1 .highlight1 {
+    background: linear-gradient(to bottom, #DE4396 100%, #0D1C9F 0%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    font-weight: 600;
+}
+
+.header__hero h1 .highlight2 {
+    background: linear-gradient(to bottom, #F7666F 0%, #406AFF 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
     font-weight: 600;
 }
 
@@ -199,7 +201,7 @@ body {
     }
     
     .nav__menu {
-        display: none; /* À remplacer par un menu burger */
+        display: none; /* À remplacer par un menu burger que je ne sais pas faire, vu que ça demande du js que je n'ai pas encore vu !*/
     }
     
     .hero__content {
