--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
 
 .header__hero .header__container {
     position: relative;
-    z-index: 3;
+    z-index: 03;
 }
 
 .hero__content {
@@ -392,7 +392,10 @@ body {
 }
 
 .leading-companies__highlight-text {
-    color: #2D3748;
+    background: linear-gradient(to bottom, #F76680 15%, #57007b 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
     font-weight: 600;
 }
 
@@ -478,14 +481,14 @@ body {
 }
 
 .meet-people__subtitle {
-    font-size: 18px;
+    font-size: 35px;
     color: #718096;
     margin-bottom: 8px;
     font-weight: 400;
 }
 
 .meet-people__title {
-    font-size: 48px;
+    font-size: 35px;
     font-weight: 700;
     color: #2D3748;
     line-height: 1.2;
@@ -566,7 +569,7 @@ body {
 
 .meet-people__ellipse {
     position: absolute;
-    bottom: 60%;
+    bottom: 58%;
     left: 50%;
     transform: translateX(-50%) translateY(50%);
     width: 72px;
