--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
    ============================================ */
 
 .header__hero {
-    padding: 80px 0 120px;
+    padding: 80px 0 80px;
     background: #FFFFFF;
     position: relative;
     z-index: 3;
@@ -103,8 +103,8 @@ body {
 .hero__content {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    gap: 80px;
+    justify-content: center;
+    gap: 20px;
 }
 
 .hero__text {
@@ -173,8 +173,7 @@ body {
 
 .services__ellipse {
     position: absolute;
-    translate: 0 120px;
-    left: 50%;
+    translate: 425px 80px;
     transform: translateX(-50%) translateY(-50%);
     width: 72px;
     height: 72px;
@@ -186,7 +185,7 @@ body {
    ============================================ */
 
 .services {
-    padding: 120px 0 100px;
+    padding: 60px 0 100px;
     background: #f7f7fa;
     position: relative;
     overflow: hidden;
@@ -277,7 +276,7 @@ body {
 }
 
 /* pagination points */
-.services__dots {              /* ? i do my best without JS */
+.services__dots {              /* i do my best without JS */
     display: flex;
     gap: 10px;
 }
@@ -442,7 +441,6 @@ body {
     display: block;
 }
 
-/* Button play */
 .leading-companies__video__play {
     position: absolute;
     top: 50%;
@@ -469,7 +467,7 @@ body {
 .meet-people {
     margin-top: 100px;
     position: relative;
-    padding-bottom: 80px; /* ? ellipse space */
+    padding-bottom: 80px; /* * Décoration space */
 }
 
 .meet-people__header {
@@ -747,7 +745,7 @@ body {
   box-shadow: 0 5px 15px rgba(84, 84, 212, 0.3);
 }
 
-/* ! decorative transition */
+/* * decorative transition */
 
 .customer-feedbacks__arrow1 {
     position: absolute;
@@ -807,7 +805,7 @@ body {
   gap: 60px;
   padding: 60px;
   border: 1px solid #E7DAED;
-  border-radius: 12px;
+  border-radius: 12px 30px 30px 12px;
   margin-bottom: 40px;
   transition: all 0.3s ease;
 }
@@ -901,7 +899,15 @@ body {
 
 .building-software {
   padding: 100px 0;
-  background: white;
+  position: relative;
+  overflow: visible;
+}
+
+.building-software__container {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .building-software__decoration {
@@ -929,11 +935,9 @@ body {
 
 .building-software__card {
   display: flex;
-  gap: 60px;
+  gap: 80px;
   align-items: center;
-  margin-bottom: 100px;
-  padding-left: 50px;
-  padding-right: 50px;
+  margin-bottom: 150px;
 }
 
 .building-software__card--reverse {
@@ -1008,12 +1012,70 @@ body {
 .building-software__image {
   flex: 1;
   position: relative;
+  z-index: 2;
 }
 
 .building-software__image img {
   width: 100%;
   height: auto;
   border-radius: 12px;
+}
+
+/** Decoration aera (top to bottom bubble) */
+
+.building-software__yellowbubble1 {
+  position: absolute;
+  top: 11.5%;
+  right: 44%; /* ! I donno why it just work in % but hey, it work ! Two hour on this shit, i'm fucking tired x.x */
+  width: 54px;
+  height: 54px;
+  z-index: 1;
+}
+
+.building-software__redbubble1 {
+  position: absolute;
+  top: 34.8%;
+  right: 25%;
+  width: 32px;
+  height: 32px;
+  z-index: 1;
+}
+
+.building-software__redbubble2 {
+  position: absolute;
+  top: 43.4%;
+  left: 44.2%;
+  width: 40px;
+  height: 40px;
+  z-index: 1;
+}
+
+.building-software__yellowbubble2 {
+  position: absolute;
+  top: 66.35%;
+  left: 11.5%;
+  width: 54px;
+  height: 54px;
+  z-index: 1;
+}
+
+.building-software__redbubble3 {
+  position: absolute;
+  bottom: 22.5%;
+  right: 20%;
+  width: 48px;
+  height: 48px;
+  z-index: 1;
+}
+
+.building-software__yellowbubble3 {
+  position: absolute;
+  bottom: -0.5%;
+  right: 42.0%;
+  transform: translateX(-50%);
+  width: 54px;
+  height: 54px;
+  z-index: 1;
 }
 
 /* ============================================
@@ -1439,6 +1501,7 @@ body {
 
 .cta__box {
   position: relative;
+  max-width: 1240px;
   background: #F3F4F6;
   border: 1px solid #FFFFFF;
   border-radius: 8px;
@@ -1447,7 +1510,6 @@ body {
   align-items: center;
   justify-content: space-between;
   gap: 40px;
-  max-width: 1240px;
   margin: 0 auto;
 }
 
@@ -1483,7 +1545,8 @@ body {
 
 .cta__highlight-button {
     position: absolute;
-    translate: 1250px 22px;
+    bottom: 10%;
+    right: 9%;
     z-index: 2;
 }
 
@@ -1628,6 +1691,18 @@ body {
    RESPONSIVE DESIGN TABLET
    ============================================ */
 
+/* global center align for body */
+
+@media (max-width: 1024px) {
+  * {
+    text-align: center !important;
+  }
+  div, section, article, header, footer {
+    justify-content: center !important;
+    align-items: center !important;
+  }
+}
+
 /* Responsive tablet for Header section */
 
 @media (max-width: 1024px) {
@@ -1734,6 +1809,17 @@ body {
   }
 }
 
+@media (max-width: 1024px) {
+  .building-software__yellowbubble1,
+  .building-software__yellowbubble2,
+  .building-software__yellowbubble3,
+  .building-software__redbubble1,
+  .building-software__redbubble2,
+  .building-software__redbubble3 {
+    display: none;
+  }
+}
+
 /* responsive tablet for Dev-process section */
 
 @media (max-width: 1024px) {
@@ -1782,7 +1868,15 @@ body {
   }
 }
 
-/* ! no need tablet section for design and development approach & our tech stack, CTA button i think */
+/* responsive tablet for CTA section */
+
+@media (max-width: 1024px) {
+  .cta__highlight-button {
+    display: none;
+  }
+}
+
+/* ! no need tablet section for design and development approach & our tech stack, i think */
 /* ============================================
    RESPONSIVE DESIGN MOBILE
    ============================================ */
