--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@
 
 }
 
+/* TODO: think to add font-size variables */
+
 /* ============================================
    RESET & BASE STYLES
    ============================================ */
